--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
       c32.7-19,68.1-32,105.2-38.6L-8-46.1C-13-45.2-17.8-43.4-22.2-40.8z M22-40.9c-4.4-2.6-9.2-4.3-14.2-5.1l47.1-273.6
       c37.2,6.4,72.7,19.2,105.4,38L22-40.9z"/>
       </svg>
+      <div class="logo">
+        <img src="logo.png">
+      </div>
       <nav>
         <ul>
           <li><a id="button-snow" class="active"><i class="wi wi-snow"></i></a></li>
