--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,11 @@
         <div class="logo">
               <img src="logo.png">
         </div>
+
+        <div class="navigation">
+          <a href="dashboard.html">Dashboard</a>
+        </div>
+
         <div class="card-container">
           <div id="card" class="weather">
             <svg id="inner">
